ingresscontrollerandnetworkpolicy/service.yml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: appspace  
spec:
  selector:
    app: app
  ports:
    - port: 80
      targetPort: 80
