ingresscontrollerandnetworkpolicy/ingresscontrollers.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: appspace
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
  - hosts: 
    - app.deeptechexpertconsulting.com
    secretName: app-tls
  rules:
  - host: app.deeptechexpertconsulting.com     
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-service
            port:
              number: 80
